@startuml
class Client {
    - clientId : int
    - nom : String
    - adresse : String
    - typeClient : String
    - coefficient : float
}

class Produit {
    - produitId : int
    - libelle : String
    - description : String
    - prixAchat : float
    - photo : String
    - rubrique : String
    - sousRubrique : String
}

class Commande {
    - commandeId : int
    - dateCommande : Date
    - montantTotal : float
    - statut : String
    - clientId : int
}

class Facture {
    - factureId : int
    - commandeId : int
    - montant : float
    - dateEmission : Date
}

class Catalogue {
    - catalogueId : int
    - produits : List<Produit>
}

Client "1" --> "0..*" Commande
Commande "1" --> "1" Facture
Catalogue "1" --> "0..*" Produit
@enduml
